--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -3,7 +3,7 @@
     {
       "id": "foo",
       "title": "Foo",
-      "url": "/tools/sidekick/foo.html"
-    },
+      "event": "foo"
+    }
   ]
 }
