--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -1,9 +1,7 @@
 {
-  "plugins": [
-    {
-      "id": "foo",
-      "title": "Foo",
-      "event": "foo"
-    }
-  ]
+  "specialViews": [{
+    "title": "Better JSON Viewer",
+    "path": "**.json",
+    "viewer": "/tools/sidekick/better-json-viewer/index.html"
+  }]
 }
