--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -1,7 +1,12 @@
 {
-  "specialViews": [{
-    "title": "Better JSON Viewer",
-    "path": "**.json",
-    "viewer": "/tools/sidekick/sidekick-special-view.html"
-  }]
+  "project": "Boilerplate with Library",
+  "plugins": [
+    {
+      "id": "library",
+      "title": "Library",
+      "environments": [ "edit" ],
+      "url": "/tools/sidekick/library.html",
+      "includePaths": [ "**.docx**" ]
+    }
+  ]
 }
