--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -10,3 +10,16 @@
     }
   ]
 }
+
+{
+	"id": "asset-library",
+	"title": "My Assets",
+	"environments": [
+	"edit"
+	],
+	"url": "http://localhost:4504/aem/start.html",
+	"isPalette": true,
+	"includePaths": [ "**.docx**" ],
+	"passConfig": true,
+	"paletteRect": "top: 50px; bottom: 10px; right: 10px; left: auto; width:400px; height: calc(100vh - 60px)"
+}
