--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -16,7 +16,7 @@
 	"environments": [
 	"edit"
 	],
-	"url": "http://localhost:4504/assets.html/content/dam/projects",
+	"url": "https://experience.adobe.com/solutions/CQ-assets-selectors/static-assets/resources/franklin/asset-selector.html",
 	"isPalette": true,
 	"includePaths": [ "**.docx**" ],
 	"passConfig": true,
